# Zitate-Bot

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: logging.rs  main.rs
src/db/: mod.rs  user.rs
src/discord/: mod.rs
src/event_handler/: create_commands.rs  mod.rs
src/logging/: mod.rs
