[package]
name = "zitate_bot"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
pml = "0.5.0"
serde = "1.0.160"
serenity = {version = "0.11.5", default-features = false, features = ["cache", "chrono", "client", "gateway", "model", "rustls_backend"]}
sqlite = "0.37.0"
tokio = {version = "1.27.0", features = ["macros", "rt-multi-thread"]}
